fix register page

--- a/amarcse/templates/login_register/login.html
+++ b/amarcse/templates/login_register/login.html
@@ -1,5 +1,5 @@
-{% extends base.html%}
-{% blockcontent%}
+{% extends "base.html" %}
+{% block content %}
 <body>
     <form>
         <h3>Login Here</h3>
