--- a/amarcse/templates/login_register/register.html
+++ b/amarcse/templates/login_register/register.html
@@ -1,5 +1,5 @@
-{% extends base.html%}
-{% blockcontent%}
+{% extends "base.html" %}
+{% block content %}
 <body>
     <form>
         <h3>SIGN IN</h3>
@@ -13,11 +13,11 @@
         <label for="password">Password</label>
         <input type="password" placeholder="Password" id="password">
 
-        <label for="confir password">Confirm Password</label>
-        <input type="password" placeholder="Confirm Password" id="password">
+        <label for="confirm_password">Confirm Password</label>
+        <input type="password" placeholder="Confirm Password" id="confirm_password">
 
         <button>Sign In</button>
-        <a href="login_page/index.html">I have already a account</a>
+        <a href="login_page/index.html">I already have an account</a>
     </form>
 </body>
-{% endblock%}
+{% endblock %}
